fix: images having borders on firefox

--- a/src/components/ProfileImage/ProfileImage.module.css
+++ b/src/components/ProfileImage/ProfileImage.module.css
@@ -5,4 +5,6 @@
 	border-radius: 50%;
 
 	background-color: #cccccc;
+
+	object-fit: cover;
 }
